--- a/index.html
+++ b/index.html
@@ -1,30 +1,148 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>gifTastic!</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"></script> -->
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
-    <script src="assets/gif.js"></script>
+  <meta charset="utf-8">
+  <title>Animal gif</title>
+  <style type="text/css">
+    button,
+    div,
+    form,
+    input {
+      margin: 10px;
+    }
+    body {
+        background-image: url("assets/images/20314139-seamless-light-floral-pattern-cute-background-with-flowers-decorative-doodle-texture-for-prints-text.jpg");
+    }
+
+    .container {
+        border-style: dotted;
+        border-color: black;
+        border-bottom-width: 5px;
+        padding: 10px;
+        background-color: rgba(255, 251, 226, 0.9);
+    }
+
+    h1, #buttons-view, #animal-form {
+        margin-left: 20px;
+    }
+
+    #animal-form {
+        border-bottom-color: black;
+        border-bottom-width: 1px;
+        border-bottom-style: dotted;
+    }
+  </style>
 </head>
+
 <body>
-    <!-- API key UpSkPB4Zze3BVaTT0JrldyOWnimhP6Kp -->
-    <div class="row">
-        <h1>It's gifTastic!</h1>
-        <span id="button-holder"></span>
-    </div>
-    <div class="row">
-        <br>
-        <div class="search-container">
-            <form>
-              <input type="text" placeholder="Search.." name="search" id="search">
-              <button type="submit" id="Submit">Submit</button>
-            </form>
-        </div>
-        <div id="gif-display">Display gifs here</div>
-    </div>
+
+  <div class="container">
+    <h1>Check Out Some Animal Gifs!</h1>
+    <div id="buttons-view"></div>
+
+    <form id="animal-form">
+        <label for="animal-input">Search</label>
+        <input type="text" id="animal-input">
+            <!-- New Buttons here -->
+        <input id="add-animal" type="submit" value="Add">
+    </form>
+
+    <div id="gif-display"></div>
+
+
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript">
+      // Animal array
+      var topics = ["elephant", "red panda", "cheetah", "wolf", "cow", "panda", "polar bear", "otter", "owl", "monkey"];
+
+          // Function for displaying gif data
+          function createButtons() {
+
+            // stops the repeat buttons
+            $("#buttons-view").empty();
+
+            // Looping through the array of animals
+            for (var i = 0; i <topics.length; i++) {
+
+            //generates buttons for the animals in the array
+            var btn = $("<button>");
+            btn.addClass("animals");
+            btn.attr("data-name", topics[i]);
+            btn.text(topics[i]);
+            // Adding the button to the buttons-view div
+            $("#buttons-view").append(btn);
+            }
+        }
+
+
+    function showGifs() {
+
+        var animalTopic = $(this).attr("data-name");
+        var queryURL = "http://api.giphy.com/v1/gifs/search?q=" + animalTopic + "&limit=10&api_key=239XYxcoeZPvRKflEYtELjKSjGwCxBtk";
+
+        $.ajax({
+          url: queryURL,
+          method: "GET"
+        }).then(function(response) {
+            var results = response.data;
+          for (var a = 0; a < results.length; a++) {
+            //create a new div for gifs to appear   
+            var gifDiv = $("<div class=gifs>");
+            var displayGifs = $("<img>");
+            displayGifs.attr("src", results[a].images.fixed_height_still.url);
+            // displayGifs.attr("title", 'Rating: ' + results[a].rating);
+            var rating = results[a].rating;
+            var p = $("<p>").text("Rating: " + rating);
+            displayGifs.attr("data-still", results[a].images.fixed_height_still.url);
+            displayGifs.attr("data-state", "still");
+            displayGifs.addClass("gifgif");
+            displayGifs.attr("data-animate", results[a].images.fixed_height.url);
+                
+            gifDiv.append(displayGifs);
+            gifDiv.append(p);
+            $("#gif-display").prepend(gifDiv);
+          }
+        });
+    }
+
+
+    //function for gifs
+    $(document).on("click", ".gifgif", function(){
+        var state = $(this).attr("data-state");
+            if (state == "still") {
+                $(this).attr("src", $(this).data("animate"));
+                $(this).attr("data-state", "animate");
+            }
+            else {
+                $(this).attr("src", $(this).attr("data-still"));
+                $(this).attr("data-state", "still");
+            }
+    });
+
+      // This function handles events where one button is clicked
+      $("#add-animal").on("click", function(event) {
+        event.preventDefault();
+
+        // This line grabs the input from the textbox
+        var animalInput = $("#animal-input").val().trim();
+
+        // Adding the animal text into the textbox
+        topics.push(animalInput);
+        // console.log(topics);
+
+        createButtons();
+        return false;
+      });
+
+      $(document).on("click", ".animals", showGifs);
+
+      // Calling the createButtons function to display the initial buttons
+      createButtons();
+    </script>
+  </div>
 </body>
+
 </html>
